[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.3"
failure = "0.1.8"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.6.0"
walkdir = "2.3.3"
